2015-07-21	Added flags to specify which (erm) operations to allow.
		And, now checks for runaway template recursion.

		include/biting-pear/nowai.h :
		- new

		include/biting-pear/bbq.h :
		- added biting_pear::impl::ops_flags_t and flags constants

		include/biting-pear/kthxbai.h ,
		include/biting-pear/lolwut.h ,
		include/biting-pear/orly.h :
		- added `Flags' template argument before `Levels'
		- now uses nowai.h

		include/biting-pear/omg.h :
		- added `Flags' template argument before `Levels'
		- now uses nowai.h
		- now checks for and uses allow_signal_safes in flags
		- tweaked distribution of types of operations

		include/biting-pear/yarly.h :
		- added `Flags' template argument before `Levels'
		- now uses nowai.h
		- reduced levels for kthxbai_impl from 4 to 3

		test/test-1.ccc :
		- h0, h1, and h2 are now initialized with <...allow_all>

		README.md :
		- updated synopsis to have `flags' template argument before
		  `levels'

		GNUmakefile :
		- added include/biting-pear/nowai.h as a file to depend on
		  and install

		configure ,
		lolwutconf/c++.inc :
		- added host-side and build-side endianness detection (for
		  use later)

		lolwutconf/configure.inc :
		- now tests for `grep' and `strings' utilities

2015-07-17	o rly?  ya rly!

		include/biting-pear/orly.h ,
		include/biting-pear/yarly.h ,
		test/test-3.ccc ,
		test/test-3.good :
		- new

		GNUmakefile :
		- added include/biting-pear/orly.h and include/biting-pear/
		  yarly.h as dependencies in compilation
		- added test-3

		.gitignore :
		- added test-3

2015-07-11	Multiplication.

		include/biting-pear/bbq.h ,
		include/biting-pear/kthxbai.h :
		- added multiplication and inverse multiplication

2015-07-10	C++ compiler all the way.

		GNUmakefile :
		- now compiles helper/crc64 from helper/crc64.cc

		helper/crc64.cc :
		- renamed from helper/crc64.c; C++-ized
		- changed read(...) call to fread(...)

		helper/postproc.lxx :
		- removed parser backtracking