@@ -1,3 +1,9 @@
+2015-08-07	Deliriant isti Romani.
+
+		include/biting-pear/kthxbai.h :
+		- biting_pear::kthxbai<> now allows operations other than
+		  +/- for the outermost step
+
 2015-07-21	Added flags to specify which (erm) operations to allow.
 		And, now checks for runaway template recursion.
 
